--- a/notepad.html
+++ b/notepad.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> Blueprint Project • Main Page</title>
-        <link rel="stylesheet" href = "main-design.css">
+        <link rel="stylesheet" href = "notepadstyle.css">
     </head>
     <body>
         <div class="top">
@@ -12,7 +12,7 @@
                 </div>
                 <div class = "nav">
                     <ul>
-                        <li><a href="wb.html">Whiteboard</a></li>
+                        <li><a href="main.html">Whiteboard</a></li>
                         <li><a href="to-do.html">To-Do</a></li>
                         <li><a href="main.html">Pomodoro</a></li>
                         <li><a href="notepad.html">Notepad</a></li>
@@ -20,9 +20,11 @@
                 </div>
             </nav>
         </div>
-        <div class = "main">
-            <!---add stuff over here-->
-        </div>
+        <div class="lines"></div>
+
+        <ul class="list"contenteditable="true">
+            <li>You can write your notes here</li>
+        </ul>
         <nav>
             <div class = "footer">
                 <ul>
