--- a/wb.html
+++ b/wb.html
@@ -12,4 +12,4 @@
 <input id="hex" placeholder="enter hex color"></input>
 <canvas id="draw"></canvas>
 
-<script src="app.js"></script>
+<script src="wbapp.js"></script>
