uploading the most recent code

--- a/main.html
+++ b/main.html
@@ -14,8 +14,9 @@
                     <ul>
                         <li><a href="wb.html">Whiteboard</a></li>
                         <li><a href="to-do.html">To-Do</a></li>
-                        <li><a href="main.html">Pomodoro</a></li>
+                        <li><a href="pomodoro.html">Pomodoro</a></li>
                         <li><a href="notepad.html">Notepad</a></li>
+                        <li><a href="code.html">Code Editor</a></li>
                     </ul>
                 </div>
             </nav>
