--- a/notepad.html
+++ b/notepad.html
@@ -12,7 +12,7 @@
                 </div>
                 <div class = "nav">
                     <ul>
-                        <li><a href="main.html">Whiteboard</a></li>
+                        <li><a href="wb.html">Whiteboard</a></li>
                         <li><a href="to-do.html">To-Do</a></li>
                         <li><a href="main.html">Pomodoro</a></li>
                         <li><a href="notepad.html">Notepad</a></li>
