--- a/to-do.html
+++ b/to-do.html
@@ -11,7 +11,7 @@
     <div id="myDIV" class="header">
       <h2>Things To-Do</h2>
       <input type="text" id="myInput" placeholder="Enter To-Do Item...">
-      <span onclick="newElement()" class="addBtn">Add</span>
+      <span onclick="newElement()" class="addBtn">Add to List</span>
     </div>
     <div class="list">
     <ul id="To-Do-List">
