--- a/wb.html
+++ b/wb.html
@@ -1,28 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <title> Blueprint Project • Main Page</title>
-        <link rel="stylesheet" href = "whiteboard.css">
-    </head>
-    <body>
-        <div class="top">
-            <nav>
-                <div class = "name">
-                    <a href = "main.html"> Blueprint Project </a>
-                </div>
-                <div class = "nav">
-                    <ul>
-                        <li><a href="main.html">Whiteboard</a></li>
-                        <li><a href="to-do.html">To-Do</a></li>
-                        <li><a href="main.html">Pomodoro</a></li>
-                        <li><a href="notepad.html">Notepad</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+<head>
+    <meta charset="utf-8">
+    <title>
+       	Web Paint!
+    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
 <input id="hex" placeholder="enter hex color"></input>
 <canvas id="draw"></canvas>
 
-<script src="app.js"></script>
+<script src="wbapp.js"></script>
