--- a/pomodoro/pomodoro.html
+++ b/pomodoro/pomodoro.html
@@ -11,7 +11,7 @@
 
     <div id="buttons">
       <button id="work">Work</button>
-      <button id="Break">Break</button>
+      <button id="break">Break</button>
       <button id="stop">Stop</button>
     </div>
   </div>
