--- a/pomodoro.html
+++ b/pomodoro.html
@@ -3,6 +3,7 @@
     <head>
         <title> Blueprint Project • Main Page</title>
         <link rel="stylesheet" href = "pomodoro-design.css">
+        <script type="text/javascript" src="pomodoro.js"></script>
     </head>
     <body>
         <div id="pomodoro">
