--- a/dashboard.html
+++ b/dashboard.html
@@ -1,42 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Template</title>
-<link rel="stylesheet" href = "dashboard.css">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Blueprint Project • Dashboard</title>
+  <link rel="stylesheet" href = "dashboard.css">
+  
+  <link rel="stylesheet" href = "to-do-design.css">
 </head>
 <body>
-    <div class="top">
-        <nav>
-            <div class = "name">
-                <a href = "main.html"> Blueprint Project </a>
-            </div>
-        </nav>
-    </div>
+  <div class = "name">
+      <a href = "main.html"> Blueprint Project </a>
+  </div>
 
 <section>
-  <nav>
-    <ul>
-      <div class ="pictures">
-        <!---<div>Icons made by <a href="https://www.flaticon.com/authors/linector" title="Linector">Linector</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
-      <li><a href="wb.html"><img src="whiteboard.png" alt="Whiteboard"></a></li>
-      <!--<div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
-      <li><a href="code.html"><img src="css.png" alt="Code Editor"></a></li>
+  <div class="row">
+    <div class="column left">
+      <nav>
+        <ul>
+          <div class ="pictures">
+            <!---<div>Icons made by <a href="https://www.flaticon.com/authors/linector" title="Linector">Linector</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
+          <li><a href="wb.html"><img src="whiteboard.png" alt="Whiteboard"></a></li>
+          <!--<div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
+          <li><a href="code.html"><img src="css.png" alt="Code Editor"></a></li>
+        </div>
+        </ul>
+      </nav>
     </div>
-    </ul>
-  </nav>
-  
-  <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-  </article>
+    <div class="column middle">
+      <script type="text/javascript" src="to-do-animate.js"></script>
+        <div id="myDIV" class="header">
+          <h2>Things To-Do</h2>
+          <input type="text" id="myInput" placeholder="Enter To-Do Item...">
+          <span onclick="newElement()" class="addBtn">Add</span>
+        </div>
+        <div class="list">
+        <ul id="To-Do-List">
+        </ul>
+      </div>
+    </div>
+    <div class="column last">
+    <ul class="list" contenteditable="true">
+      <li>You can write your notes here</li></ul>
+    
+    </div>
+  </div>
 </section>
-
-<footer>
-  <p>Footer</p>
-</footer>
-
 </body>
 </html>
