--- a/pomodoro/pomodoro.html
+++ b/pomodoro/pomodoro.html
@@ -1,3 +1,6 @@
+<!-- This code was adapted from an open-source project distributed under the MIT license by Raj Gupta
+https://codepen.io/rajdgreat007/pen/ZpZWbw
+-->
 <div id="pomodoro">
   <div id="container">
     <div id="timer">
