--- a/pomodoro/pomodoro.html
+++ b/pomodoro/pomodoro.html
@@ -1,7 +1,7 @@
 <!-- This code was adapted from an open-source project distributed under the MIT license by Raj Gupta
 https://codepen.io/rajdgreat007/pen/ZpZWbw
 -->
-<div id="pomodoro">
+<div id="pomodoro-app">
   <div id="container">
     <div id="timer">
       <div id="time">
