--- a/Notepad/notepad.html
+++ b/Notepad/notepad.html
@@ -8,7 +8,7 @@
         <div class="top">
             <nav>
                 <div class = "name">
-                    <a href = "main.html"> Blueprint Project </a>
+                    <a href = "../home.html"> Blueprint Project </a>
                 </div>
                 <div class = "nav">
                     <ul>
