--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class = "name">
-      <a href = "main.html"> Blueprint Project </a>
+      <a href = "home.html"> Blueprint Project </a>
   </div>
 
 <section>
@@ -18,9 +18,9 @@
         <ul>
           <div class ="pictures">
             <!---<div>Icons made by <a href="https://www.flaticon.com/authors/linector" title="Linector">Linector</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
-          <li><a href="wb.html"><img src="whiteboard.png" alt="Whiteboard"></a></li>
+          <li><a href="WhiteBoard/wb.html"><img src="assets/whiteboard.png" alt="Whiteboard"></a></li>
           <!--<div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
-          <li><a href="code.html"><img src="css.png" alt="Code Editor"></a></li>
+          <li><a href="CodeEditor/index.html"><img src="assets/css.png" alt="Code Editor"></a></li>
         </div>
         </ul>
       </nav>
