--- a/pomodoro/pomodoro.html
+++ b/pomodoro/pomodoro.html
@@ -1,21 +1,32 @@
-<!-- This code was adapted from an open-source project distributed under the MIT license by Raj Gupta
-https://codepen.io/rajdgreat007/pen/ZpZWbw
--->
-<div id="pomodoro-app">
-  <div id="container">
-    <div id="timer">
-      <div id="time">
-        <span id="minutes">25</span>
-        <span id="colon">:</span>
-        <span id="seconds">00</span>
+<!-- This code was adapted from an open-source project distributed under the MIT license by Raj Gupta https://codepen.io/rajdgreat007/pen/ZpZWbw-->
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> Blueprint Project • Pomodoro</title>
+        <link rel="stylesheet" href = "pomodoro.css">
+        <script type="text/javascript" src="pomodoro.js"></script>
+    </head>
+    <body>
+      <div class = "name">
+        <a href = "../home.html"> Blueprint Project </a>
       </div>
-      <div id="filler"></div>
-    </div>
-
-    <div id="buttons">
-      <button id="work">Work</button>
-      <button id="break">Break</button>
-      <button id="stop">Stop</button>
-    </div>
-  </div>
-</div>
+      <div id="pomodoro-app">
+        <div id="container">
+          <div id="timer">
+            <div id="time">
+              <span id="minutes">25</span>
+              <span id="colon">:</span>
+              <span id="seconds">00</span>
+            </div>
+            <div id="filler"></div>
+          </div>
+      
+          <div id="buttons">
+            <button id="work">Work</button>
+            <button id="break">Break</button>
+            <button id="stop">Stop</button>
+          </div>
+        </div>
+      </div>
+    </body>
+</html>
