--- a/Todo/to-do.html
+++ b/Todo/to-do.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class = "name">
-      <a href = "main.html"> Blueprint Project </a>
+      <a href = "../home.html"> Blueprint Project </a>
   </div>
     <div id="myDIV" class="header">
       <h2>Things To-Do</h2>
