--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <!-- BOOTSTRAP CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <!-- MAIN STYLE CSS -->
-    <link rel="stylesheet" href="css/main-design.css">
+    <link rel="stylesheet" href="home.css">
   </head>
 
   <body>
@@ -21,16 +21,16 @@
         <div class="row">
           <div class="col-md-4">
             <div class="logo">
-              <h2><a href="index.html">Project Name/Logo</a></h2>
+              <h2><a href="#">Project Name/Logo</a></h2>
             </div>
           </div>
           <div class="col-md-8">
             <div class="main-menu">
               <ul>
-                <li><a href="wb.html">Whiteboard</a></li>
-                <li><a href="to-do.html">To-Do</a></li>
-                <li><a href="promodoro.html">Promodoro</a></li>
-                <li><a href="notepad.html">Notepad</a></li>
+                <li><a href="WhiteBoard/wb.html">Whiteboard</a></li>
+                <li><a href="Todo/to-do.html">To-Do</a></li>
+                <li><a href="pomodoro/pomodoro.html">Promodoro</a></li>
+                <li><a href="Notepad/notepad.html">Notepad</a></li>
               </ul>
             </div>
           </div>
