--- a/CodeEditor/index.html
+++ b/CodeEditor/index.html
@@ -1,3 +1,5 @@
+<!-- This code was adapted from an open-source project distributed under the MIT license by Enlight https://enlight.nyc/ -->
+
 <!DOCTYPE html>
 <html>
   <head>
