--- a/home.html
+++ b/home.html
@@ -1,3 +1,5 @@
+<! -- This code was adapted from https://css-tricks.com/how-to-create-a-notebook-design-with-css/ -->
+<! -- This code was adapted from https://1stwebdesigner.com/15-css-background-effects/ -->
 <!DOCTYPE html>
 <html>
 
