--- a/Notepad/notepad.html
+++ b/Notepad/notepad.html
@@ -12,10 +12,10 @@
                 </div>
                 <div class = "nav">
                     <ul>
-                        <li><a href="wb.html">Whiteboard</a></li>
-                        <li><a href="to-do.html">To-Do</a></li>
-                        <li><a href="main.html">Pomodoro</a></li>
-                        <li><a href="notepad.html">Notepad</a></li>
+                        <li><a href="../WhiteBoard/wb.html">Whiteboard</a></li>
+                        <li><a href="../Todo/to-do.html">To-Do</a></li>
+                        <li><a href="../Pomodoro/pomodoro.html">Pomodoro</a></li>
+                        <li><a href="../Notepad/notepad.html">Notepad</a></li>
                     </ul>
                 </div>
             </nav>
