--- a/home.html
+++ b/home.html
@@ -1,5 +1,3 @@
-<! -- This code was adapted from https://css-tricks.com/how-to-create-a-notebook-design-with-css/ -->
-<! -- This code was adapted from https://1stwebdesigner.com/15-css-background-effects/ -->
 <!DOCTYPE html>
 <html>
 
@@ -23,7 +21,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="logo">
-              <h2><a href="#">Project Name/Logo</a></h2>
+              <h2><a href="#">ProDoro</a></h2>
             </div>
           </div>
           <div class="col-md-8">
@@ -33,6 +31,7 @@
                 <li><a href="Todo/to-do.html">To-Do</a></li>
                 <li><a href="pomodoro/pomodoro.html">Promodoro</a></li>
                 <li><a href="Notepad/notepad.html">Notepad</a></li>
+                <li><a href="CodeEditor/index.html">CodeEditor</a></li>
               </ul>
             </div>
           </div>
@@ -45,12 +44,10 @@
         <div class="row">
           <div class="col-md-12">
             <div class="header-text text-center">
-              <h1> Project Name </h1>
-              <h2> explanation </h2>
-
-              <div class="btn-group mt-2 mb-4" role="group" aria-label="actionButtons">
-                <h3><a href="dashboard.html"> Go to dashboard</a></h3>
-              </div>
+              <h1> ProDoro </h1>
+              <h2> Prodoro is an all-in-one Productivity dashboard with all the apps you desire in one place
+ </h2>
+              <p> This app was created during the BluePrint Hackathon by Bhavesh, Gulce, Lucas, Ramya </p>
             </div>
           </div>
         </div>
