--- a/Notepad/notepad.html
+++ b/Notepad/notepad.html
@@ -1,7 +1,9 @@
+<! -- This code was adapted from https://css-tricks.com/how-to-create-a-notebook-design-with-css/ -->
+
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Blueprint Project • Main Page</title>
+        <title> Blueprint Project • Notepad</title>
         <link rel="stylesheet" href = "notepadstyle.css">
     </head>
     <body>
