--- a/Todo/to-do.html
+++ b/Todo/to-do.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Blueprint Project • Main Page</title>
+    <title> Blueprint Project • To-Do List</title>
     <link rel="stylesheet" href = "to-do-design.css">
   </head>
   <body>
